--- a/client/src/app/components/assertions/assertions-table/assertions-table.component.html
+++ b/client/src/app/components/assertions/assertions-table/assertions-table.component.html
@@ -47,17 +47,10 @@
           [nzSortFn]="true">
           AID
         </th>
-        <th nzWidth="120px"
+        <th nzWidth="320px"
           nzLeft
-          [nzColumnKey]="sortColumns.GeneName"
           [nzSortFn]="true">
-          Gene
-        </th>
-        <th nzWidth="200px"
-          nzLeft
-          [nzColumnKey]="sortColumns.VariantName"
-          [nzSortFn]="true">
-          Variant
+          Molecular Profile
         </th>
         <th nzWidth="250px"
           [nzColumnKey]="sortColumns.DiseaseName"
@@ -135,12 +128,8 @@
             [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
         </th>
         <th nzLeft>
-          <cvc-clearable-input-filter [(inputModel)]="geneNameInput"
-            [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
-        </th>
-        <th nzLeft>
-          <cvc-clearable-input-filter [(inputModel)]="variantNameInput"
-            [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
+          <!-- <cvc-clearable-input-filter [(inputModel)]="geneNameInput"
+            [onInputChanged]="textInputCallback"></cvc-clearable-input-filter> -->
         </th>
         <th>
           <cvc-clearable-input-filter [(inputModel)]="diseaseNameInput"
@@ -283,10 +272,7 @@
             <cvc-assertion-tag [assertion]="aid"></cvc-assertion-tag>
           </td>
           <td nzLeft>
-            <cvc-gene-tag [gene]="aid.gene"></cvc-gene-tag>
-          </td>
-          <td nzLeft>
-            <cvc-variant-tag [variant]="aid.variant"></cvc-variant-tag>
+            <cvc-molecular-profile-tag [molecularProfile]="aid.molecularProfile" [truncateLongName]="40"></cvc-molecular-profile-tag>
           </td>
           <td>
             <ng-container *ngIf="aid.disease.name; else diseaseElse">
