--- a/client/src/app/components/molecular-profiles/molecular-profile-popover/molecular-profile-popover.component.html
+++ b/client/src/app/components/molecular-profiles/molecular-profile-popover/molecular-profile-popover.component.html
@@ -15,7 +15,7 @@
         <!-- molecular profile expression -->
         <nz-descriptions-item nzTitle="MP Expression"
           nzSpan="2">
-          <cvc-mp-tag-name [nameSegments]="mp.parsedName"></cvc-mp-tag-name>
+          <cvc-mp-tag-name [nameSegments]="mp.parsedName" [enablePopover]="false"></cvc-mp-tag-name>
         </nz-descriptions-item>
 
         <!-- evidence item count -->
