--- a/client/src/app/views/molecular-profiles/molecular-profiles-detail/molecular-profiles-summary/molecular-profiles-summary.page.html
+++ b/client/src/app/views/molecular-profiles/molecular-profiles-detail/molecular-profiles-summary/molecular-profiles-summary.page.html
@@ -91,7 +91,7 @@
     <!-- evidence table -->
     <nz-col nzSpan="24">
       <cvc-evidence-table [molecularProfileId]="mp.id"
-        [displayGeneAndVariant]="false"
+        [displayMolecularProfile]="false"
         cvcHeight="300px"
         cvcTitle="Evidence">
       </cvc-evidence-table>
