--- a/client/src/app/views/variants/variants-detail/variants-summary/variants-summary.page.html
+++ b/client/src/app/views/variants/variants-detail/variants-summary/variants-summary.page.html
@@ -186,7 +186,7 @@
     <!-- evidence table -->
     <nz-col nzSpan="24">
       <cvc-evidence-table [variantId]="variant.id"
-        [displayGeneAndVariant]="false"
+        [displayMolecularProfile]="false"
         cvcHeight="300px"
         cvcTitle="{{variant.name}} Evidence">
       </cvc-evidence-table>
