--- a/client/src/app/components/molecular-profiles/molecular-profile-tag/molecular-profile-tag.component.html
+++ b/client/src/app/components/molecular-profiles/molecular-profile-tag/molecular-profile-tag.component.html
@@ -38,7 +38,7 @@
     nzTwotoneColor="#33B358"></i>
   <!-- molecular profile name length mean: 12; mode: 5 (825); max: 68 -->
   <ng-container *ngIf="truncateLongName; else fullName">
-    {{ molecularProfile.name | truncate: 20}}
+    {{ molecularProfile.name | truncate: this.truncationLength}}
   </ng-container>
   <ng-template #fullName>
     {{ molecularProfile.name }}
