--- a/client/src/app/views/assertions/assertions-revise/assertions-revise.view.html
+++ b/client/src/app/views/assertions/assertions-revise/assertions-revise.view.html
@@ -9,12 +9,7 @@
         *nzSpaceItem><strong>{{ assertion.name }}</strong> Parents:</span>
       <span *nzSpaceItem
         class="tags">
-        <a routerLink="/genes/{{ assertion.gene.id }}">
-          <cvc-gene-tag [gene]="assertion.gene"></cvc-gene-tag>
-        </a>
-        <a routerLink="/variants/{{ assertion.variant.id }}">
-          <cvc-variant-tag [variant]="assertion.variant"></cvc-variant-tag>
-        </a>
+        <cvc-molecular-profile-tag [molecularProfile]="assertion.molecularProfile" [enablePopover]="false"></cvc-molecular-profile-tag>
       </span>
     </nz-space>
   </ng-template>
