--- a/client/src/app/views/evidence/evidence-revise/evidence-revise.view.html
+++ b/client/src/app/views/evidence/evidence-revise/evidence-revise.view.html
@@ -10,12 +10,7 @@
         *nzSpaceItem><strong>{{ evidence.name }}</strong> Parents:</span>
       <span *nzSpaceItem
         class="tags">
-        <a routerLink="/genes/{{ evidence.gene.id }}">
-          <cvc-gene-tag [gene]="evidence.gene"></cvc-gene-tag>
-        </a>
-        <a routerLink="/variants/{{ evidence.variant.id }}">
-          <cvc-variant-tag [variant]="evidence.variant"></cvc-variant-tag>
-        </a>
+        <cvc-molecular-profile-tag [molecularProfile]="evidence.molecularProfile" [enablePopover]="false"></cvc-molecular-profile-tag>
       </span>
     </nz-space>
 
