--- a/client/src/app/forms/molecular-profile-input/molecular-profile-input.form.html
+++ b/client/src/app/forms/molecular-profile-input/molecular-profile-input.form.html
@@ -11,7 +11,7 @@
   (nzOnSearchChange)="onSearchChange($event)" nzPrefix="#" nzNotFoundContent="No matches..."
   [nzValueWith]="autoCompleteValueFor" (nzOnSelect)="this.suggestions = []">
 
-  <textarea nz-input rows="1" style="width: 100%" [(ngModel)]="mpName"
+  <textarea #mpInputField nz-input rows="1" style="width: 100%" [(ngModel)]="mpName"
     (ngModelChange)="onMpNameChanged($event)"></textarea>
 
   <ng-container *nzMentionSuggestion="let variant">
@@ -19,3 +19,22 @@
   </ng-container>
 
 </nz-mention>
+
+<button nz-button nz-popover nzSize="small" [nzPopoverTitle]="variantFinderTitle"
+  [(nzPopoverVisible)]="this.variantFinderVisible"
+  (click)="this.variantFinderVisible = !this.variantFinderVisible"
+  [nzPopoverContent]="variantFinder" [nzPopoverTrigger]="undefined " nzPopoverPlacement="bottom" >
+  Find a Variant
+  <i nz-icon nzType="caret-down" nzTheme="outline"></i>
+</button>
+
+<ng-template #variantFinderTitle>
+  Find a Variant
+  <span [ngStyle]="{ 'float': 'right' }">
+    <i nz-icon nzType="close" nzTheme="outline" (click)="this.variantFinderVisible = false"></i>
+  </span>
+</ng-template>
+
+<ng-template #variantFinder>
+  <cvc-variant-submit-form (onVariantSelected)="onVariantSelected($event)"></cvc-variant-submit-form>
+</ng-template>
