--- a/client/src/app/forms/config/types/molecular-profile-input/molecular-profile-input.type.html
+++ b/client/src/app/forms/config/types/molecular-profile-input/molecular-profile-input.type.html
@@ -7,7 +7,7 @@
     <cvc-variant-submit-form (onVariantSelected)="onVariantSelected($event)"></cvc-variant-submit-form>
   </nz-tab>
   <nz-tab nzTitle="Complex Molecular Profile">
-    <cvc-complex-molecular-profile-input-form (onMolecularProfileSelected)="onMpSelected($event)"></cvc-complex-molecular-profile-input-form>
+    <cvc-complex-molecular-profile-input-form #complexMolecularProfileInputForm (onMolecularProfileSelected)="onMpSelected($event)"></cvc-complex-molecular-profile-input-form>
   </nz-tab>
  </nz-tabset>
 
