Hook up submit evidence form with molecular profiles

--- a/client/src/app/forms/config/types/molecular-profile-input/molecular-profile-input.type.html
+++ b/client/src/app/forms/config/types/molecular-profile-input/molecular-profile-input.type.html
@@ -3,7 +3,7 @@
  -->
 
 <nz-tabset [nzAnimated]="false" (nzSelectChange)="clear()">
-  <nz-tab nzTitle="Single Variant">
+  <nz-tab nzTitle="Simple Molecular Profile">
     <cvc-variant-submit-form (onVariantSelected)="onVariantSelected($event)"></cvc-variant-submit-form>
   </nz-tab>
   <nz-tab nzTitle="Complex Molecular Profile">
