--- a/client/src/app/views/variants/variants-detail/variants-summary/variants-summary.page.html
+++ b/client/src/app/views/variants/variants-detail/variants-summary/variants-summary.page.html
@@ -184,20 +184,10 @@
 
     <!-- evidence table -->
     <nz-col nzSpan="24">
-      <cvc-evidence-table [variantId]="variant.id"
-        [displayMolecularProfile]="false"
+      <cvc-molecular-profiles-table [variantId]="variant.id"
         cvcHeight="300px"
-        cvcTitle="{{variant.name}} Evidence">
-      </cvc-evidence-table>
-    </nz-col>
-
-    <!-- assertions table -->
-
-    <nz-col nzSpan="24">
-      <cvc-assertions-table [variantId]="variant.id"
-        cvcHeight="200px"
-        cvcTitle="{{variant.name}} Assertions">
-      </cvc-assertions-table>
+        cvcTitle="{{variant.name}} Molecular Profiles">
+      </cvc-molecular-profiles-table>
     </nz-col>
   </nz-row>
 </ng-container>
