simplified tpl logic, adjusted textSegment styles

--- a/client/src/app/components/molecular-profiles/molecular-profile-tag-name/molecular-profile-tag-name.component.html
+++ b/client/src/app/components/molecular-profiles/molecular-profile-tag-name/molecular-profile-tag-name.component.html
@@ -1,19 +1,16 @@
 <ng-container *ngFor="let s of nameSegments; let i=index">
-  <ng-container *ngIf="s.__typename == 'MolecularProfileTextSegment'">
-    <span [innerHtml]="s.text">
-        </span>&nbsp;
-  </ng-container>
-  <!-- <ng-container *ngIf="s.__typename == 'Gene'">
-    <cvc-gene-tag [gene]="s"
-      [enablePopover]="this.enablePopover"></cvc-gene-tag>
-  </ng-container> -->
+  <span *ngIf="s.__typename == 'MolecularProfileTextSegment'"
+    [innerHtml]="s.text"
+  class="text-segment">
+    </span>
   <ng-container *ngIf="s.__typename == 'Variant'">
     <cvc-tag-group>
       <!-- ugly kludge to get gene-tag to accept nameSegments[i-1] as LinkableGene -->
       <ng-container *ngFor="let g of [nameSegments[i-1]]">
         <cvc-gene-tag *ngIf="g.__typename == 'Gene'"
           [gene]="g"
-          [enablePopover]="this.enablePopover"></cvc-gene-tag>
+          [enablePopover]="this.enablePopover">
+        </cvc-gene-tag>
       </ng-container>
 
       <cvc-variant-tag [variant]="s"
