Wrap MP builder in a card and add help text and header

--- a/client/src/app/forms/config/types/molecular-profile-input/molecular-profile-input.type.html
+++ b/client/src/app/forms/config/types/molecular-profile-input/molecular-profile-input.type.html
@@ -1,6 +1,7 @@
 <!-- <input type="hidden" [formControl]="formControl" [formlyAttributes]="field">
 <nz-rate [ngModel]="formControl.value" (ngModelChange)="updateField($event)" [formlyAttributes]="field"></nz-rate>
  -->
+<nz-card>
 
 <nz-tabset [nzAnimated]="false" (nzSelectChange)="clear()">
   <nz-tab nzTitle="Simple Molecular Profile">
@@ -12,3 +13,4 @@
  </nz-tabset>
 
  <input type="hidden" [formControl]="formControl" [formlyAttributes]="field">
+</nz-card>
